# django-svelte-backbone

./: .gitignore
backend/: .pre-commit-config.yaml  .prospector.yaml  pyproject.toml
backend/api_accounts/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/api_auth/: tokens.py  urls.py  views.py
backend/api_users/: urls.py  views.py
backend/backend/: auth.py  response.py  urls.py  wsgi.py
backend/backend/settings/: development.py  production.py
backend/etc/: .env.sample
backend/templates/api_accounts/: account_activation_email.html  password_reset_email.html
