[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rafał Misiarek <misiarek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.12.4"
python-decouple = "^3.4"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]
prospector = {extras = ["with_bandit", "with_mypy"], version = "^1.3.1"}
pre-commit = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
